--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
+    "@types/react-infinite-scroller": "^1.2.2",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "formik": "^2.2.9",
@@ -22,6 +23,7 @@
     "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
